# VoxelGame

./: .gitignore  CMakeLists.txt
embed/: CMakeLists.txt
shaders/: cascade_shadow_map.geom  cascade_shadow_map.vert  main.frag  main.vert  main_2d.vert  main_cascade_shadow_map.frag  main_shadow_map.frag  shadow_map.vert
src/: Eb.h  Engine.cpp  Engine.h  EngineObject.h  Scene2D.cpp  Scene2D.h  Scene3D.cpp  Scene3D.h  main.cpp
src/Assets/: AssetLoader.h  Assets.cpp  Assets.h  ModelLoader.h  ShaderLoader.h  TextureLoader.h
src/Components/: DrawableComponent.h
src/Graphics/: Camera.cpp  Camera.h  ChunkMesh.cpp  ChunkMesh.h  DefaultShaders.cpp  DefaultShaders.h  Drawable.h  Enums.h  GlBuffer.cpp  GlBuffer.h  Lights.h  LineVertex.h  LinesBatch.cpp  LinesBatch.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderState.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Transformable.cpp  Transformable.h  Vertex.h  VertexBuffer.h  VoxelVertex.h
src/Graphics/2D/: Sprite2D.cpp  Sprite2D.h  Vertex2D.h
src/Graphics/3D/: Camera.cpp  Camera.h  ChunkMesh.cpp  ChunkMesh.h  Lights.cpp  Lights.h  LinesBatch.cpp  LinesBatch.h  Material.h  MeshInstance.cpp  MeshInstance.h  ModelInstance.cpp  ModelInstance.h  Shape3D.cpp  Shape3D.h  Sprite3D.cpp  Sprite3D.h  Vertex3D.h  VertexArrayInstance.cpp  VertexArrayInstance.h
src/Graphics/Common/: CascadeShadowMap.cpp  CascadeShadowMap.h  DefaultShaders.cpp  DefaultShaders.h  DepthRenderTexture.cpp  DepthRenderTexture.h  DepthRenderTextureArray.cpp  DepthRenderTextureArray.h  Drawable.h  Frustum.cpp  Frustum.h  GLBuffer.cpp  GLBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderState.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h  TextureFBO.cpp  TextureFBO.h  Transformable.cpp  VertexArray.cpp  VertexArray.h
src/System/: Clock.cpp  Clock.h  Time.cpp  Time.h
src/Utils/: Files.cpp  Files.h  IdStorage.cpp  IdStorage.h  NoCopyable.h  Singleton.h  SparseSet.h  VecUtils.h
src/Voxel/: Chunk.cpp  Chunk.h  Chunks.cpp  Chunks.h  Voxel.h
src/VoxelLigtning/: LightSolver.cpp  LightSolver.h  Lightmap.cpp  Lightmap.h
src/Window/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Window.cpp  Window.h
